# fabriccli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: capacity.yml  example.yml  publish.yml  test.yml
fabric_cli/: auth-test.py  auth.py  capacity.py  capacity_management.py  cli.py  environment.py  fabric.py  git.py  lakehouses.py  logging_config.py  main.py  warehouses.py  workspaces.py
tests/: conftest.py  test_auth.py  test_environment.py  test_fabric.py  test_git.py  test_lakehouses.py  test_warehouses.py  test_workspaces.py
